# cowriter

./: .gitignore  Dockerfile.windows  README.md  SetupCowriter.ps1  Window.xaml  app.ps1  build_windows.bat  cowriter.build.ps1  cowriter.ps1  install_windows.bat  main.py  pester.psd1  pyproject.toml  requirements.txt  setup.ps1  setup.py
python/: .gitignore  README.md  build_linux_ci.sh  main.py  requirements.txt
python/.github/workflows/: build.yml
python/src/cowriter/: __main__.py  app.py
python/src/cowriter/views/: __init__.py  layout_config.py  main_window.py  menu_config.py
python/tests/: run_all_tests.py  settings.test.py
src/: __init__.py  __main__.py  app.py  app_new.py
src/assets/: ICON_GUIDE.md
src/config/: settings.py
src/cowriter/: cowriter.psd1  cowriter.psm1  cowriter.tests.ps1
src/cowriter/assets/: README.md
src/cowriter/files/prompts/: system.txt
src/cowriter/files/xaml/: cowriter.xaml
src/cowriter/public/: Start-Cowriter.ps1  Update-Cowriter.ps1
src/cowriter/scripts/: SetupCowriter.ps1  setup.ps1  test.ps1
src/cowriter/views/: toolbar_config.py
src/scripts/: SetupCowriter.ps1  setup.ps1
src/views/: layout_config.py  main_window.py
src/views/dialogs/: __init__.py
tests/: app.test.py  main_module.test.py  main_window.test.py
