[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt"
]
build-backend = "hatchling.build"

[project]
name = "cowriter"
description = "A modern Python desktop GUI application built with tkinter and Sun Valley theme."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dynamic = [
  "version",
  "dependencies"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourusername/cowriter"
Repository = "https://github.com/yourusername/cowriter"
Issues = "https://github.com/yourusername/cowriter/issues"

[project.scripts]
cowriter = "src.__main__:main"

[project.gui-scripts]
cowriter-gui = "src.__main__:main"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.metadata.hooks.requirements_txt]
filename = "requirements.txt"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/requirements.txt",
  "/README.md"
]
